--- a/nginx.yaml
+++ b/nginx.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -7,7 +6,7 @@ spec:
   selector:
     matchLabels:
       app: nginx
-  minReadySeconds: 5
+  replicas: 2 # tells deployment to run 2 pods matching the template
   template:
     metadata:
       labels:
