--- a/nginx.yaml
+++ b/nginx.yaml
@@ -2,16 +2,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
-  
+  labels:
+    app: nginx-test
 spec:
+  replicas: 2
   selector:
     matchLabels:
-      app: nginx
-  replicas: 1 # tells deployment to run 2 pods matching the template
+      app: nginx-test
   template:
     metadata:
       labels:
-        app: nginx
+        app: nginx-test
     spec:
       containers:
       - name: nginx
