--- a/nginx.yaml
+++ b/nginx.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: apache-deployment
   labels:
-    app: nginx-test
+    role: webserver
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: nginx-test
+      role: webserver
   template:
     metadata:
       labels:
-        app: nginx-test
+        role: webserver
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.14.2
+      - name: frontend
+        image: httpd
         ports:
         - containerPort: 80
